k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: app
spec:
  type: LoadBalancer
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 8000
